Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in
M
mutter
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 764
    • Issues 764
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 92
    • Merge Requests 92
  • CI / CD
    • CI / CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI / CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Collapse sidebar
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
  • GNOME
  • mutter
  • Issues
  • #12

Closed
Open
Opened Feb 01, 2018 by Jeffrey Smith@whydoubt

GUI hangs when system is up for (multiple of) 50 days

When uptime crosses a multiple of 2^32 milliseconds (~49.7 days), windows stop responding to keyboard and mouse events. Restarting X clears the problem (until the uptime passes another ~49.7 days). This was originally observed with gnome-session, but it is also observable in mutter, and the latter was easier to test.

Here is my basic testing process. As it is difficult to manipulate the system's monotonic clock, I used a hacked version of the Xorg server that would use "wall" time for its clock instead of the system's monotonic clock. With this "wall" clock, an overflow/wrap-around event occurs around Jan 16 2018 17:24:15 UTC.

  1. Set the date to a few minutes before the overflow time
  2. Start up [hacked] Xorg
  3. Start up mutter
  4. Start up a couple of regular X clients (e.g. xterm, xlogo)
  5. Hit Alt-Tab several times to switch between windows
  6. Wait fot the clock overflow event to pass
  7. Hit Alt-Tab several times to switch between windows
  • Expected result: focus switches with each Alt-Tab
  • Actual result: focus switches only the first time, after which key presses and button presses have no effect
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None
Reference: GNOME/mutter#12